# ChangeLog for app-misc/lcd4linux
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/lcd4linux/ChangeLog,v 1.42 2013/05/13 03:14:45 patrick Exp $

  13 May 2013; Patrick Lauer <patrick@gentoo.org> metadata.xml:
  Remove removed lcd herd from metadata

  06 May 2012; Pacho Ramos <pacho@gentoo.org>
  +files/lcd4linux-0.10.1_rc2-missing-header.patch,
  lcd4linux-0.10.1_rc2-r2.ebuild:
  Let it work with python3 as main interpreter and include missing header
  (#311529 by Ian Delaney).

  06 May 2012; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  lcd herd is empty, drop old.

  24 Nov 2011; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Drop maintainer due retirement, bug #158470

  05 Mar 2010; Samuli Suominen <ssuominen@gentoo.org>
  lcd4linux-0.10.1_rc2-r2.ebuild,
  +files/lcd4linux-0.10.1_rc2-autoconf-2.65.patch:
  Fix building with Autoconf >= 2.65 wrt #298002, thanks to Flameeyes and
  SpanKY.

  17 Aug 2009; Robert Buchholz <rbu@gentoo.org>
  -files/lcd4linux-0.10.0-gcc4-compat.patch,
  -files/lcd4linux-0.10.0-kernel2.6.19.patch,
  -files/lcd4linux-0.10.0-no-x86-asm.patch,
  -files/lcd4linux-0.10.0-null-driver.patch, -files/lcd4linux-0.10.0.initd,
  -lcd4linux-0.10.0-r1.ebuild, -lcd4linux-0.10.1_rc2-r1.ebuild,
  lcd4linux-0.10.1_rc2-r2.ebuild:
  Fix typo, discovered by Enrico in bug 281552
  Remove cruft, fix RDEPEND

  16 May 2009; Robin H. Johnson <robbat2@gentoo.org>
  lcd4linux-0.10.0-r1.ebuild, lcd4linux-0.10.1_rc2-r1.ebuild,
  lcd4linux-0.10.1_rc2-r2.ebuild:
  Migration to virtual/libusb. Verified by code inspection. Some of the lcd
  types have some potentially questionable USB usage code (esp G15), but I
  suspect that they may have been broken already in that case, and this
  change does not make anything worse.

  17 Nov 2008; Diego E. Pettenò <flameeyes@gentoo.org>
  files/lcd4linux-0.10.0-gcc4-compat.patch:
  Fix patch with absolute paths.
