@@ -1,10 +1,22 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX lcd4linux-0.10.1_rc2-autoconf-2.65.patch 593 SHA256 7aab2efe60f6914da17c30b075ec127e07e4dc815f834c49017723baf02ba2be SHA512 55f09599fa894f9ce7aa128e708d7c7bc145630d0db6ec31b04302cdf9df19aec12a05debf66dc8fb8cf6b657f3f6c430ae6615a946c7d84a7b6875880241bb2 WHIRLPOOL bfebdf769cb3aaeefc8b0e01c72f46146e74e91fb265f7c8900501abf8dbffd93e2ba7167f5be69e2e9f813b50d0e483d65d316316a67fc63181405efb9ec245
 AUX lcd4linux-0.10.1_rc2-missing-header.patch 337 SHA256 39dca4b3a224f006c8c5b065d1a51f494b985d73b8a2e04e39fc5b88bc12684d SHA512 3bec09fbd773565945c925a39412223e1f59db2752290ba945d254ccdf826b8789162c7482d98feca8ebd0dde14be7ce18c46fb7c4d98cd9c4129d4e96dfea89 WHIRLPOOL 53b10ecab7bcb8d02e3f86920bffa62737d77efba73b4af30aa8da51d79a2d68a8ae3b1453f50eec4af944dfa015d69da747efa72c1ce89d1551c29910fd4936
 AUX lcd4linux-0.10.1_rc2-mpd.patch 9230 SHA256 ee1294d4c53086b998f1ff3fa90987b5a58baa589850b77edab755ef836b1583 SHA512 8763f22deb728d5bfbd4ae601c3cc8808ada042374b604a3787429497373d6d52cbe48f72be37d149f823debfdc740b2a23db5fe2e20ab1091743f2d6ba186af WHIRLPOOL 0fee25e461f1cc2b759b2e90981a2f8f0176354b8c287d5a8b72fc5a70ee50fe2bc4c7034401ab8807bf1b1bd50ea30abf7d4bfde6940f8a2dc861ec3c1084c7
 AUX lcd4linux-0.10.1_rc2-nordtsc.patch 4703 SHA256 f0520872c820003e78f90304c0e36511e53d11cf67732eb4debb44cc68697e34 SHA512 fb0579cde4ce812e4f26a3e30f0b223c9dbafd07ccf297dffb8ba50bc757f2a7a01c37d456b4a8c8b5ec616a4b694d2efd11a55d1f2e20f4397bfcdda1d59585 WHIRLPOOL 231e3691e3ce001ec91db75e1ccd22b5e632e3afa724f91034d0a09bf5bef1daaa8e58f137fe73e8394c7c850e798c1c550b218b640cf8588ba51c96f2ae08d5
+AUX lcd4linux-0.10.1_rc2-usbdebug.patch 3032 SHA256 42b37f27aba233c1f95ad05b9931b860af2711dfc2c6440a2054fbc2d0ea90cc SHA512 252ebab0e125c2189178f1de35c46d398f79d4b5fd4ff5b92c72874e95c7b45c25eaa92b600a8d5a160e4e45c265f69b6240123c6d2ec4076c7947659e46ae46 WHIRLPOOL cf3995d82e5549c84218915ba8c0ca6bc1fa004b876956ab3e8083e7dc8346e0444f332bae19dd2501438f4379213ed23914f4f8bab824c58b953fe47a0cc701
 AUX lcd4linux-0.10.1_rc2-warnings.patch 2229 SHA256 8960a45af139e2f2d226474c9d5f099ca70605bb72815b03d9ad72222be7b8d5 SHA512 ee6b163dc93f2913c629b056ec79cffaecbdb9124d187be8e616e10cc3cec917d98cc8131fda9d3b310530c00cd61dc1617dce4f54143c77962cbc0c58f4d615 WHIRLPOOL 2b169b7d2248bddda2a03685263726247bac062e7b0fb4b6a28eb5add194941c27d955c3b5ad4d1775c6959e5b3661920ac86f8d660c5d209b1bfa907cc04add
 AUX lcd4linux-0.10.1_rc2.initd 661 SHA256 87351cb7d48cfbbf94da3432113debd5a74c5c87802c39af64b2fe61eb7f79b1 SHA512 da23e3b7620c9748f8317a1e03ac7025908de8a41a2f8985ec92e2b00aa99261d064a4eb1cbb077159e1b108f9dacdd4b137d0a8fa8fd813c8fb8473d99bc205 WHIRLPOOL 6e0092216f56bd3cacefad0ff479a8d4c65c8dbc94d67228e2b051cb1884766cdba37a1865fdbf293b2fd0eee80d5575442ea5a90cd5ecc702246d1a6e6a590e
 DIST lcd4linux-0.10.1-RC2.tar.gz 386188 SHA256 9e69ded08dc9a8c75f36a3c020e7aa96b90313d91b2f58add6d4dfff1f8861b0 SHA512 8c4299f50ab4068d4106ba32309f4f66bfedf382a4aed7495cf400d22c57c22c4dfabd80f7e4355417c5c0d964e69f0c268a50bae6924b759b720bd728a969f9 WHIRLPOOL 71c4189e4e9a229e448d44097c2d6e5ab7c71fa97a92815438307f728b86ee238a114a14c73511e473f4c26bbc52a8b67a1a00693c7ef789c909b64165a3f075
 EBUILD lcd4linux-0.10.1_rc2-r2.ebuild 5371 SHA256 18a50db938f8cebf1718b52753a5759ab2440693acc968d9aace54b117ba420c SHA512 ea2720fca6fa4f3e557a53fe8ac608654c9a1c3c123fd5cf57737b206df050a9241aaa1ba1353d0ee9375edda805842a08fab7ff8e161e51d26451c188baf832 WHIRLPOOL 5cd31cabc389de8e7322b54785faf9cb2a6a159db75f4c68be85d09b87306b9414c292bb3165702968a4ebaea64d410314e7aaa12ac61c3c3aeca0d51ba57724
-MISC ChangeLog 7913 SHA256 db3036da44bd08988c34686b2abed6597851519a7acc77206618d6e04e52cccf SHA512 5938a9c6d824d9add67ad0eb7db73cf2f89c44290b552cc309991bd74d36b64decdd9d56f2062b8787f03ac84807a3e08886e632cba1d7c23dae6af987ea5134 WHIRLPOOL a1a16b394eadcd0216e37ef9a6315b8e924efec1c827b051b5f5c38181a70238d1c0319e8cc4a4cb134a8c936dfc0ffde043dadb3b2a3fe29bf5c28fbb817bbb
+EBUILD lcd4linux-0.10.1_rc2-r3.ebuild 5253 SHA256 00a39df064564f64c32f144018728ca92c1e82060b49d053cb18c72293c8742a SHA512 6b288b7a4976e88293bd1e73668aaf6839ac2e01df04cf8f153ac866578cb6d64731bb285bb1f0015304499b1d22b5286804a18d50af63cbe6e637cfac0c1e0a WHIRLPOOL 31e356f97e868c73090c7624bf9ae436559c9806bedfbf6fb97617571a5589af8dd7782434f3070f531ba4a0fff9b80924792f055da3becfaa36f760c66cf3a4
+MISC ChangeLog 8164 SHA256 78de57b571f7fe290223a812dd599a86bea160acbdf8e160b03e6e497bb593fa SHA512 162342458681eddf5dbb053657e8d11f7015ae208c6ea5f12c6fd2d5274cadcf7ad82942948259c4e74bea9c07da982ed97ac36205ba95bcfaf233b556864c7b WHIRLPOOL 9510788cbd02e551af0fae5a0a66d0c51fcc4f4c165072a7b7e065b18aed347b86933dadca58730572587d41087f82564c75987fae61724b8b4920b19392f1b9
 MISC metadata.xml 607 SHA256 2c5b7c51c9ee58bce4632bece43679bb66733b87d6f9414d95fb528a10124126 SHA512 2bbd2cc862235d44e628987e9d190b158c618d052a879650a5e79d38e4b3c28d72c84f3a12f9c3cc3e37f8b26b88cb79da061cd5583486faf374a0ce15a3314c WHIRLPOOL 94e4070c7ab4e0a6ff02e561c6da770b9e3d4ac66ff98df140da533805c5ed2a79d353f1c910dfcee7662dc4d68eceeac7e5b8ae873d0104328e3add998b60aa
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iEYEAREIAAYFAlLBVLoACgkQCaWpQKGI+9SonwCfdK9pLN5sVFq6TaykL4Z8+6js
+obcAnRbRwDtdc2T4mWRgly0o3v2+dHoo
+=S8mL
+-----END PGP SIGNATURE-----
