@@ -1,6 +1,13 @@
 # ChangeLog for app-misc/lcd4linux
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/lcd4linux/ChangeLog,v 1.42 2013/05/13 03:14:45 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/lcd4linux/ChangeLog,v 1.43 2013/12/30 11:10:49 pacho Exp $
+
+*lcd4linux-0.10.1_rc2-r3 (30 Dec 2013)
+
+  30 Dec 2013; Pacho Ramos <pacho@gentoo.org>
+  +files/lcd4linux-0.10.1_rc2-usbdebug.patch, +lcd4linux-0.10.1_rc2-r3.ebuild:
+  Drop usb_debug calls, bug #469156 by Juergen Rose and patch by Gerhard
+  Hintermayer
 
   13 May 2013; Patrick Lauer <patrick@gentoo.org> metadata.xml:
   Remove removed lcd herd from metadata
